# ME_3300_Engineering_Measurement_Systems

./: README.md  _quarto.yml  main.py  pyproject.toml
Instructor/Lab_01/Other Code/: Lab_1_Solution.asv  Lab_1_Solution_Example.m  time_volts_data.csv  velocity_vs_volts_data.csv
Instructor/Lab_02/: Expt_02.aux  Expt_02.dvi  Expt_02.out  Expt_02.toc
Instructor/Lab_02/Code/: Expt02_Calibration.html  Expt02_Calibration.mlx  Expt02_Calibration_plotting.asv  Expt02_Calibration_plotting.html  Expt02_Calibration_plotting.m  Expt02_Data_aquisition.html  Expt02_Data_aquisition.m  Expt02_Data_aquisition.mlx  Expt02_Pendulum_Swing_Plot.m  Expt02_Postprocess.html  Expt02_Postprocess2.mlx  Expt02_Test.m  Expt02_Test.mlx
Instructor/Lab_02/Data/: Data.xlsx
Instructor/Lab_03/Code/: Expt02_Data_aquisition.m
Instructor_delete_soon/Lab_02/: Expt_02.tex
Instructor_delete_soon/Lab_02/Code/: Expt02_Calibration.m  Expt02_Postprocess.asv
Instructor_delete_soon/Lab_02/Docs/: Expt_02.tex
Lab2026_2027/: main.py  pyproject.toml
Lab2026_2027/Lab_01/Code/: CurveFitClassDemo.m  Expt1_A.m  Expt1_A2.mlx  Expt1_B.m  Expt1_B2.mlx  Expt1_C.m  Expt1_C2.mlx  Lab01_Example_Solution.ipynb  Lab01_Starter_Script.ipynb  wrtData.m
Lab_01/Code/: Read_data.m
Lab_01/Data/: Read_data.asv
Lab_01/Other Code/: Lab_1_Solution.m  velocity_vs_volts_data.csv
Labs/: lab4_help.m
Labs/Lab_01/Code/: Lab_1_Solution_Example.m  (+1 more)
Labs/Lab_05/: MATLAB_Data_Aquisition.m
Labs_25_26/: lab4_help.m
Labs_26_27/: ~$LabFigures.pptx
Student/Lab_02/: ME 3300 Experiment 02.docx
filters/: logbook-questions.lua
(+393 files in other folders)
