[project]
name = "me-3300-engineering-measurement-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "dwfpy==1.2.0",
    "pydwf>=1.1.19",
    "scipy>=1.17.1",
    "pyqt5>=5.15.11",
    "mplcursors>=0.7.1",
    "plotly>=6.9.0",
    "nbformat>=5.10.4",
]
